--- a/package.json
+++ b/package.json
@@ -6,12 +6,24 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
+    "cordova-build-android": "vue-cli-service cordova-build-android",
+    "cordova-build-browser": "vue-cli-service cordova-build-browser",
+    "cordova-build-ios": "vue-cli-service cordova-build-ios",
+    "cordova-build-osx": "vue-cli-service cordova-build-osx",
+    "cordova-prepare": "vue-cli-service cordova-prepare",
+    "cordova-serve-android": "vue-cli-service cordova-serve-android",
+    "cordova-serve-browser": "vue-cli-service cordova-serve-browser",
+    "cordova-serve-ios": "vue-cli-service cordova-serve-ios",
+    "cordova-serve-osx": "vue-cli-service cordova-serve-osx",
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "animejs": "^3.0.1",
     "core-js": "^2.6.5",
+    "normalize.css": "^8.0.1",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
+    "vue2-touch-events": "^2.0.0",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
@@ -27,6 +39,7 @@
     "eslint-plugin-vue": "^5.0.0",
     "sass": "^1.18.0",
     "sass-loader": "^7.1.0",
+    "vue-cli-plugin-cordova": "^2.1.3",
     "vue-template-compiler": "^2.6.10"
   }
 }
