--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "animejs": "^3.0.1",
     "core-js": "^2.6.5",
     "normalize.css": "^8.0.1",
+    "v-mask": "^1.3.3",
     "vue": "^2.6.10",
+    "vue-notification": "^1.3.16",
     "vue-router": "^3.0.3",
     "vue2-touch-events": "^2.0.0",
     "vuex": "^3.0.1"
